# Digital-FTE-Autonomous-AI-Employee-Hackathon-0-

./: .env.example  .gitignore  .mcp.json  Business_Goals.md  Company_Handbook.md  Dashboard.md  README.md  ecosystem.config.js  pyproject.toml  running-guide.md  running.md
.claude/: CLAUDE.md  settings.json
.state/: gmail_processed.json
Done/: ACTION_draft_email_dry_2026-02-27T14-59-40.md  ACTION_send_email_dry_2026-02-27T14-59-40.md  ACTION_send_email_reject_test_2026-02-27T15-00-00.md  ACTION_send_email_test_example_com_2026-02-27T14-53-29.md  APPROVAL_email_send_akn.shazil_2026-02-27T13-30-00.md  EMAIL_client@example.com_2026-02-27T02-52-10.md  EMAIL_complex_test_2026-02-27T10-00-00.md  EMAIL_jane.smith@example.com_2026-02-27T02-52-10.md  EMAIL_newsletter@deals.example.com_2026-02-27T02-52-46.md  EMAIL_verify@x.com_2026-02-26T16-51-34.md  EMAIL_verify@x.com_2026-02-26T16-51-34_1.md
Logs/: 2026-02-26.json  2026-02-27.json  2026-02-28.json  dashboard_archive_2026-02-28.json
Pending_Approval/: APPROVAL_email_send_akn.shazil_2026-02-27T00-00-00.md
Plans/: PLAN_email_ESCALATION_client-at-example.com_2026-02-27T08-00-00.md  PLAN_email_ESCALATION_client-at-example.com_2026-02-27T08-00-01.md  PLAN_email_ESCALATION_client-example-com_2026-02-27T09-00-00.md  PLAN_email_ESCALATION_verify-at-x.com_2026-02-27T07-15-00.md  PLAN_email_MEETING_REQUEST_jane-smith-example-com_2026-02-27T09-00-00.md  PLAN_email_MEETING_REQUEST_jane.smith-at-example.com_2026-02-27T08-00-02.md  PLAN_email_MEETING_REQUEST_jane.smith-at-example.com_2026-02-27T08-00-03.md  (+1 more)
scripts/: orchestrator.py  (+2 more)
(+139 files in other folders)
